--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-media/sw-bulk-edit-product-media.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-media/sw-bulk-edit-product-media.html.twig
@@ -2,6 +2,7 @@
 <div class="sw-bulk-edit-product-media">
     {% block sw_bulk_edit_product_media_form %}
     <sw-bulk-edit-product-media-form
+        :disabled="disabled"
         @media-open="showMediaModal = true"
     />
     {% endblock %}
