--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-visibility/sw-bulk-edit-product-visibility.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/product/sw-bulk-edit-product-visibility/sw-bulk-edit-product-visibility.html.twig
@@ -16,7 +16,8 @@
                 class="sw-product-detail__select-visibility"
                 :entity-collection="currentValue"
                 :placeholder="$tc('sw-product.visibility.placeholderVisibility')"
-                @change="updateCurrentValue"
+                :disabled="disabled"
+                @change="(value) => updateCurrentValue(value)"
             />
         </template>
     </sw-inherit-wrapper>
@@ -31,6 +32,7 @@
         <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
         <a
             class="sw-card__quick-link advanced-visibility"
+            :class="{ 'is--disabled': disabled }"
             @click="openModal"
         >
             {{ $tc('sw-product.visibility.linkAdvancedVisibility') }} <sw-icon
