--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-customer/sw-bulk-edit-customer.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-customer/sw-bulk-edit-customer.html.twig
@@ -26,7 +26,7 @@
             variant="primary"
             :is-loading="isLoading"
             :process-success="false"
-            :disabled="isLoading"
+            :disabled="isLoading || !hasChanges"
             @click="openModal"
         >
             {{ $tc('sw-bulk-edit.applyChanges') }}
