--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.html.twig
@@ -6,6 +6,22 @@
     </template>
     {% endblock %}
 
+    {% block sw_bulk_edit_product_smart_bar_back %}
+    <template #smart-bar-back>
+        <router-link
+            v-if="isChild"
+            class="smart-bar__back-btn"
+            :to="{ name: 'sw.product.detail.variants', params: { id: $route.params.parentId } }"
+            :style="{ 'color': $route.meta.$module?.color }"
+        >
+            <sw-icon
+                name="default-arrow-head-left"
+                small
+            />
+        </router-link>
+    </template>
+    {% endblock %}
+
     {% block sw_bulk_edit_product_smart_bar_header %}
     <template #smart-bar-header>
         {% block sw_bulk_edit_product_smart_bar_header_title %}
@@ -40,6 +56,31 @@
     {% block sw_bulk_edit_product_content %}
     <template #content>
         <sw-card-view v-if="selectedIds.length > 0 && isLoadedData">
+            {% block sw_bulk_edit_product_content_inheritance_card %}
+            <sw-card
+                v-if="isChild"
+                class="sw-bulk-edit-product__inheritance"
+                position-identifier="sw-bulk-edit-product-inheritance"
+            >
+                {% block sw_bulk_edit_product_content_inheritance_alert %}
+                <sw-alert variant="info">
+                    <template #customIcon>
+                        <div class="sw-bulk-edit-product__inheritance-icon">
+                            <sw-icon
+                                name="default-web-link"
+                                color="#7363e5"
+                                size="16"
+                            />
+                        </div>
+                    </template>
+                    <template #default>
+                        {{ $tc('sw-bulk-edit.product.alertInheritance.message') }}
+                    </template>
+                </sw-alert>
+                {% endblock %}
+            </sw-card>
+            {% endblock %}
+
             {% block sw_bulk_edit_product_content_gereral_information_card %}
             <sw-card
                 class="sw-bulk-edit-product-base__info"
@@ -51,6 +92,8 @@
                     :form-fields="generalFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -68,6 +111,8 @@
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
                     @change-value="onChangePrices"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -75,6 +120,7 @@
 
             {% block sw_bulk_edit_product_content_advanced_prices_card %}
             <sw-card
+                v-if="!isChild"
                 class="sw-bulk-edit-product-base__advanced-prices"
                 position-identifier="sw-bulk-edit-product-advanced-prices"
                 :title="$tc('sw-bulk-edit.product.advancedPrices.cardTitle')"
@@ -170,6 +216,8 @@
                     :form-fields="propertyFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -187,6 +235,8 @@
                     :form-fields="deliverabilityFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -204,6 +254,8 @@
                     :form-fields="assignmentFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -211,6 +263,7 @@
 
             {% block sw_bulk_edit_product_content_media_card %}
             <sw-card
+                v-if="!isChild"
                 class="sw-bulk-edit-product-base__media"
                 position-identifier="sw-bulk-edit-product-media"
                 :title="$tc('sw-bulk-edit.product.media.cardTitle')"
@@ -221,6 +274,8 @@
                     :form-fields="mediaFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -238,6 +293,8 @@
                     :form-fields="labellingFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -255,6 +312,8 @@
                     :form-fields="seoFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
                 {% endblock %}
             </sw-card>
@@ -271,6 +330,8 @@
                     :form-fields="measuresPackagingFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
             </sw-card>
             {% endblock %}
@@ -286,6 +347,8 @@
                     :form-fields="essentialCharacteristicsFormFields"
                     :bulk-edit-data="bulkEditProduct"
                     :entity="product"
+                    @inheritance-restore="onInheritanceRestore"
+                    @inheritance-remove="onInheritanceRemove"
                 />
             </sw-card>
             {% endblock %}
@@ -301,6 +364,8 @@
                 <sw-bulk-edit-custom-fields
                     class="sw-bulk-edit__custom-fields"
                     :sets="customFieldSets"
+                    :entity="product"
+                    :parent-entity="parentProduct"
                     @change="onCustomFieldsChange"
                 />
             </sw-card>
