--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-order/sw-bulk-edit-order.html.twig
@@ -25,7 +25,7 @@
             variant="primary"
             :is-loading="isLoading"
             :process-success="false"
-            :disabled="isLoading"
+            :disabled="isLoading || !hasChanges"
             @click="openModal"
         >
             {{
