--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
@@ -1,3 +1,4 @@
+<!-- eslint-disable vuejs-accessibility/click-events-have-key-events -->
 {% block sw_product_variants_overview %}
 <div class="sw-product-variants-overview">
 
@@ -122,7 +123,6 @@
         :data-source="variants"
         :columns="variantColumns"
         :show-settings="true"
-        :show-selection="false"
         :sort-by="sortBy"
         :sort-direction="sortDirection"
         :is-loading="isLoading"
@@ -419,6 +419,122 @@
                 :total-visible="7"
                 @page-change="onPageChange"
             />
+        </template>
+        {% endblock %}
+
+        {% block sw_product_variants_overview_bulk %}
+        <template #bulk>
+            {% block sw_product_variants_overview_bulk_edit %}
+            <span
+                v-if="acl.can('product.editor')"
+                class="link link-primary"
+                @click="toggleBulkEditModal"
+            >
+                {{ $tc('global.default.bulkEdit') }}
+            </span>
+            {% endblock %}
+
+            {% block sw_product_variants_overview_bulk_delete %}
+            {% endblock %}
+        </template>
+        {% endblock %}
+
+        {% block sw_product_variants_overview_bulk_edit_modal %}
+        <template #bulk-modals="{ selection }">
+            <sw-bulk-edit-modal
+                v-if="showBulkEditModal"
+                class="sw-product-variants-overview__bulk-edit-modal"
+                :selection="selection"
+                :bulk-grid-edit-columns="variantColumns"
+                @edit-items="onEditItems"
+                @modal-close="toggleBulkEditModal"
+            >
+                {% block sw_product_variants_overview_bulk_edit_modal_column_name %}
+                <template #column-name="{ item }">
+                    <template v-if="item.options">
+                        <router-link
+                            class="sw-product-variants-overview__variation-link"
+                            :to="{ name: 'sw.product.detail.base', params: { id: item.id } }"
+                            @click="onOptionEdit(item)"
+                        >
+                            <sw-icon
+                                class="sw-product-variants-overview__variation-link-icon"
+                                name="default-text-editor-link"
+                            />
+                            <span
+                                v-for="(singleVariation, index) in item.options"
+                                :key="index"
+                                class="sw-product-variants-overview__variation-link-name"
+                            >
+                                {{ singleVariation.translated.name }}
+                            </span>
+                        </router-link>
+                    </template>
+                </template>
+                {% endblock %}
+
+                {% block sw_product_variants_overview_bulk_edit_modal_column_price %}
+                <template
+                    v-for="currency in currencies"
+                    :slot="`column-price.${currency.id}.net`"
+                    slot-scope="{ item }"
+                >
+                    <sw-inheritance-switch
+                        :key="`else-switch-${currency.isoCode}`"
+                        :is-inherited="isPriceFieldInherited(item, currency)"
+                        disabled
+                    />
+                    <sw-price-preview
+                        :key="`else-price-field-${currency.isoCode}`"
+                        :price="item.price ? item.price : []"
+                        :default-price="getDefaultPriceForVariant(item, currency)"
+                        :tax-rate="productTaxRate"
+                        :currency="currency"
+                    />
+                </template>
+                {% endblock %}
+
+                {% block sw_product_variants_overview_bulk_edit_modal_column_media %}
+                <template #column-media="{ item }">
+                    <sw-inheritance-switch
+                        class="sw-product-variants-overview_media__inherited-icon"
+                        :is-inherited="isMediaFieldInherited(item)"
+                        disabled
+                    />
+                    <sw-product-variants-media-upload
+                        :source="item"
+                        :upload-tag="item.id"
+                        :is-inherited="isMediaFieldInherited(item)"
+                        :parent-product="product"
+                        disabled
+                    />
+                </template>
+                {% endblock %}
+
+                {% block sw_product_variants_overview_bulk_edit_modal_column_active %}
+                <template #column-active="{ item }">
+                    <sw-icon
+                        v-if="item.active === true"
+                        class="is--active"
+                        name="small-default-checkmark-line-medium"
+                        small
+                    />
+                    <sw-icon
+                        v-else-if="item.active === false"
+                        class="is--inactive"
+                        name="small-default-x-line-medium"
+                        small
+                    />
+                    <sw-icon
+                        v-else
+                        key="inherit-icon"
+                        name="custom-inherited"
+                        size="16"
+                        multicolor
+                    />
+                </template>
+                {% endblock %}
+            </sw-bulk-edit-modal>
         </template>
         {% endblock %}
 
