--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-preview-v2/sw-media-preview-v2.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-preview-v2/sw-media-preview-v2.scss
@@ -40,7 +40,12 @@ $sw-media-preview-v2-locked-icon-z-index: 5;
     .sw-media-preview-v2__item.sw-icon {
         height: 100%;
         width: 100%;
-        max-height: 100px !important;
+        max-height: 100px;
+
+        &.sw-media-preview-v2__placeholder {
+            max-width: 64px;
+            max-height: 55px;
+        }
     }
 
     .sw-media-preview-v2__play-button {
