--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-single-select/sw-single-select.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-single-select/sw-single-select.scss
@@ -3,6 +3,7 @@
 .sw-single-select {
     .sw-single-select__selection-input {
         padding: 12px 0;
+        min-height: 22px + 2 * 12px;
         width: 0;
         display: inline-block;
 
@@ -14,8 +15,8 @@
     }
 
     .sw-single-select__selection-text {
-        display: inline-block;
-        padding-left: 8px;
+        padding: 12px 8px;
+        min-height: 22px + 2 * 12px;
 
         &.is--placeholder {
             color: lighten($color-darkgray-200, 25%);
@@ -27,8 +28,10 @@
             padding: 0 6px 0;
         }
 
-        .sw-single-select__selection-input {
+        .sw-single-select__selection-input,
+        .sw-single-select__selection-text {
             padding: 8px 8px;
+            min-height: 22px + 2 * 8px;
         }
     }
 
@@ -37,8 +40,10 @@
             padding: 0 6px 0;
         }
 
-        .sw-single-select__selection-input {
+        .sw-single-select__selection-input,
+        .sw-single-select__selection-text {
             padding: 4px 8px;
+            min-height: 22px + 2 * 4px;
         }
     }
 }
