NEXT-19922 - Remove feature flag FEATURE_NEXT_16800

--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-in-category/sw-condition-line-item-in-category.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-in-category/sw-condition-line-item-in-category.html.twig
@@ -17,10 +17,7 @@
         description-position="bottom"
         @change="setCategoryIds"
     >
-        <template
-            v-if="feature.isActive('FEATURE_NEXT_16800')"
-            #result-description-property="{ item }"
-        >
+        <template #result-description-property="{ item }">
             {% block sw_condition_line_item_in_category_field_description %}
             <slot
                 name="result-description-property"
