fix: tree item width in flow builder

--- a/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree/sw-tree.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/tree/sw-tree/sw-tree.scss
@@ -42,7 +42,7 @@
         }
 
         .sw-tree-item {
-            min-width: 100%;
+            min-width: max-content;
         }
 
         .sw-tree-item__children {
