--- a/src/Storefront/Resources/views/storefront/component/pagination.html.twig
+++ b/src/Storefront/Resources/views/storefront/component/pagination.html.twig
@@ -2,6 +2,11 @@
     {% set currentPage = ((criteria.offset + 1) / criteria.limit )|round(0, 'ceil') %}
     {% set totalPages = (entities.total / criteria.limit)|round(0, 'ceil') %}
 
+    {% set paginationSuffix = '' %}
+    {% if paginationLocation %}
+        {% set paginationSuffix = '-' ~ paginationLocation %}
+    {% endif %}
+
     {% if totalPages > 1 %}
         <nav aria-label="pagination" class="pagination-nav">
             {% block component_pagination %}
@@ -12,14 +17,14 @@
                             <input type="radio"
                                    {% if currentPage == 1 %}disabled="disabled"{% endif %}
                                    name="p"
-                                   id="p-first"
+                                   id="p-first{{ paginationSuffix }}"
                                    value="1"
                                    class="d-none"
                                    title="pagination">
                         {% endblock %}
 
                         {% block component_pagination_first_label %}
-                            <label class="page-link" for="p-first">
+                            <label class="page-link" for="p-first{{ paginationSuffix }}">
                                 {% block component_pagination_first_link %}
                                     {% sw_icon 'arrow-medium-double-left' style { 'size': 'fluid', 'pack': 'solid'} %}
                                 {% endblock %}
@@ -34,14 +39,14 @@
                             <input type="radio"
                                    {% if currentPage == 1 %}disabled="disabled"{% endif %}
                                    name="p"
-                                   id="p-prev"
+                                   id="p-prev{{ paginationSuffix }}"
                                    value="{{ currentPage - 1 }}"
                                    class="d-none"
                                    title="pagination">
                         {% endblock %}
 
                         {% block component_pagination_prev_label %}
-                            <label class="page-link" for="p-prev">
+                            <label class="page-link" for="p-prev{{ paginationSuffix }}">
                                 {% block component_pagination_prev_link %}
                                     {% block component_pagination_prev_icon %}
                                         {% sw_icon 'arrow-medium-left' style {'size': 'fluid', 'pack': 'solid'} %}
@@ -76,7 +81,7 @@
                                 {% block component_pagination_item_input %}
                                     <input type="radio"
                                            name="p"
-                                           id="p{{ page }}"
+                                           id="p{{ page }}{{ paginationSuffix }}"
                                            value="{{ page }}"
                                            class="d-none"
                                            title="pagination"
@@ -85,7 +90,7 @@
 
                                 {% block component_pagination_item_label %}
                                     <label class="page-link"
-                                           for="p{{ page }}">
+                                           for="p{{ page }}{{ paginationSuffix }}">
                                         {% block component_pagination_item_link %}
                                             {% block component_pagination_item_text %}
                                                 {{ page }}
@@ -105,14 +110,14 @@
                             <input type="radio"
                                    {% if currentPage == totalPages %}disabled="disabled"{% endif %}
                                    name="p"
-                                   id="p-next"
+                                   id="p-next{{ paginationSuffix }}"
                                    value="{{ currentPage + 1 }}"
                                    class="d-none"
                                    title="pagination">
                         {% endblock %}
 
                         {% block component_pagination_next_label %}
-                            <label class="page-link" for="p-next">
+                            <label class="page-link" for="p-next{{ paginationSuffix }}">
                                 {% block component_pagination_next_link %}
                                     {% block component_pagination_next_icon %}
                                         {% sw_icon 'arrow-medium-right' style { 'size': 'fluid', 'pack': 'solid'} %}
@@ -129,14 +134,14 @@
                             <input type="radio"
                                    {% if currentPage == totalPages %}disabled="disabled"{% endif %}
                                    name="p"
-                                   id="p-last"
+                                   id="p-last{{ paginationSuffix }}"
                                    value="{{ totalPages }}"
                                    class="d-none"
                                    title="pagination">
                         {% endblock %}
 
                         {% block component_pagination_last_label %}
-                            <label class="page-link" for="p-last">
+                            <label class="page-link" for="p-last{{ paginationSuffix }}">
                                 {% block component_pagination_last_link %}
                                     {% block component_pagination_last_icon %}
                                         {% sw_icon 'arrow-medium-double-right' style {
